[package]
name = "inindexer"
version = "4.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/INTEARnear/inindexer"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/inindexer"
description = "A framework for building NEAR Protocol indexers"

[dependencies]
async-trait = "0.1"
log = "0.4"
near-indexer-primitives = "0.30.1"
serde_json = "1"
tokio-stream = "0.1"
tokio = { version = "1.37", features = ["signal", "fs", "rt", "sync"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
semver = "1"
futures = "0.3"
tokio-util = "0.7"
fastnear-neardata-fetcher = "0.30.1"
fastnear-primitives = "0.30.1"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
simple_logger = "5.0.0"
temp-file = "0.1.8"

[[example]]
name = "watch-the-slime"
path = "examples/watch_the_slime.rs"

[[example]]
name = "ft-transfers"
path = "examples/ft_transfers.rs"

[[example]]
name = "download"
path = "examples/download.rs"
